fixed hard to see colors based on screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,21 +18,21 @@ nav {
 } 
 
 h1 {
-    color:  #1fef3b;
+    color:  #1f096f;
     font-size: 4em;
     line-height: 0.7em;
     margin: 24px 8px;
 }
 
 #quizQuestion {
-    color:  #1fef3b;
+    color:  #1f096f;
     font-size: 3em;
     line-height: 0.7em;
     margin: 24px 8px;
 }
 
 #initialsContainer h1 {
-    color:  #1fef3b;
+    color:  #1f096f;
     font-size: 2.5em;
     line-height: 0.7em;
     margin: 24px 8px;
@@ -46,7 +46,7 @@ h2 {
 }
 
 #quizTitle {
-    color: #1fef3b;
+    color: #1f096f;
     font-size: 4em;
     line-height: 0.5em;
     margin: 24px 8px;
